[package]
name = "vcr-cassette"
version = "2.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/vcr-cassette"
documentation = "https://docs.rs/vcr-cassette"
description = "Serializer and deserializer for the VCR Cassette format"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]
json = ["dep:serde_json"]
matching = []
regex = ["dep:regex"]

[dependencies]
regex = { version = "1", optional = true }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1", optional = true }
void = "1.0.2"
chrono = "0.4.19"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.67"
serde_yaml = "0.8.20"
